prevent overflow on main

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,10 @@
   box-sizing: border-box;
 }
 
+main {
+  overflow-x: hidden;
+}
+
 #root {
   position: relative;
 }
